<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/orange"
                android:layout_height="wrap_content"
                android:text="@string/название">

            </TextView>


            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:textColor="@color/green"
                android:layout_height="wrap_content"
                android:text="@string/закупка">

            </TextView>


            <TextView
                android:textColor="@color/blue"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/продажа">

            </TextView>


        </LinearLayout>

        <View
            android:layout_marginStart="8dp"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/black">

        </View>

        <LinearLayout
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd">

            </TextView>


            <TextView
                android:id="@+id/item_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_25_13">

            </TextView>


            <TextView
                android:id="@+id/item_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_33_24">

            </TextView>


        </LinearLayout>


    </LinearLayout>

    
</androidx.cardview.widget.CardView>